--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -325,6 +325,9 @@ jobs:
             # your code here
             yum install -y curl
       - run:
+          name: Delay Running Smoke tests
+          command: sleep 60
+      - run:
           name: Get backend url
           command: |
             # your code here
@@ -338,11 +341,11 @@ jobs:
             export BACKEND_IP=$(aws ec2 describe-instances --filters Name=instance-state-name,Values=running --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
-            if curl "${API_URL}/api/status" | grep "ok"
+            if [curl "${API_URL}/api/status" | grep "ok"]
             then
-              echo 0 
+              return 0 
             else
-              exit 1
+              return 1
             fi
       - run:
           name: Frontend smoke test.
@@ -350,7 +353,7 @@ jobs:
             # your code here
             URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
             echo ${URL} 
-            if curl ${URL} | grep "Welcome"
+            if [curl ${URL} | grep "Welcome"]
             then
                 # Change this to 0 after the job fails
               return 1
