--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -341,11 +341,11 @@ jobs:
             export BACKEND_IP=$(aws ec2 describe-instances --filters Name=instance-state-name,Values=running --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
-            if [curl "${API_URL}/api/status" | grep "ok"]
+            if curl -s "${API_URL}/api/status" | grep "ok"
             then
-              return 0 
+              exit 0 
             else
-              return 1
+              exit 1
             fi
       - run:
           name: Frontend smoke test.
@@ -353,12 +353,12 @@ jobs:
             # your code here
             URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
             echo ${URL} 
-            if [curl ${URL} | grep "Welcome"]
+            if -s curl ${URL} | grep "Welcome" 
             then
                 # Change this to 0 after the job fails
-              return 1
+              exit 1
             else
-              return 1
+              exit 1
             fi
       # - destroy-environment:
       #     stackid: "${CIRCLE_WORKFLOW_ID:0:7}"
@@ -377,8 +377,6 @@ jobs:
           command: |
             # your code here
             yum install -y tar gzip curl
-            curl -sL https://rpm.nodesource.com/setup_10.x | bash -
-            yum install -y nodejs
       - run:
           name: Update cloudfront distribution
           command: |
