--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -353,16 +353,16 @@ jobs:
             # your code here
             URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
             echo ${URL} 
-            if -s curl ${URL} | grep "Welcome" 
+            if curl -s ${URL} | grep "Welcome" 
             then
                 # Change this to 0 after the job fails
               exit 1
             else
               exit 1
             fi
-      # - destroy-environment:
-      #     stackid: "${CIRCLE_WORKFLOW_ID:0:7}"
-      # - revert-migrations
+      - destroy-environment:
+          stackid: "${CIRCLE_WORKFLOW_ID:0:7}"
+      - revert-migrations
       # Here's where you will add some code to rollback on failure  
 
   cloudfront-update:
