--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,15 +1,20 @@
 
-- name: "upgrade packages."
+- name: "update apt packages."
   become: true
   apt:
-    upgrade: "yes"
+    update_cache: yes
+
+- name: "upgrade packages"
+  become: true
+  apt:
+    upgrade: yes
 
 - name: "install dependencies."
   become: true
   apt:
     name: ["nodejs", "npm"]
     state: latest
-    # update_cache: yes
+    update_cache: yes
 
 - name: "install pm2"
   become: true
