--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -409,6 +409,11 @@ jobs:
     steps:
       # Checkout code from git
       - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            # your code here
+            yum install -y tar gzip curl
       - attach_workspace:
           at: ~/
       - run:
